# anines-ultimate-ingestion-framework

./: .gitignore  README.md  mise.toml
adf/dataset/: ds_extract_load_configs.json  ds_landing_parquet.json  ds_last_batch_timestamps.json
adf/factory/: adf-ingestion-framework-sandbox.json
adf/linkedService/: saingestionframeworksb.json
adf/pipeline/: pl_databricks_job.json  pl_get_last_batch_timestamp.json  pl_master_extract_load_pipeline.json  pl_set_last_batch_timestamp.json  pl_sql_extract.json
adf/trigger/: pl_source_a_dataset_b.json
bundles/extract_load/: README.md  databricks.yml  pyproject.toml
bundles/extract_load/fixtures/environment_configs/: sandbox.yml
bundles/extract_load/fixtures/extract_and_load_configs/source_a/: el.source_a_dataset_b.yml
bundles/extract_load/fixtures/extract_load_configs/source_a/: el.source_a_dataset_b.yml
bundles/extract_load/fixtures/extract_load_configs/source_x/: el.source_x_dataset_y.yml
bundles/extract_load/resources/: db_bundles_job.yml  source_a_dataset_b.yml
bundles/extract_load/src/: notebook.py
bundles/extract_load/src/parametrized/: extraction.py
libs/extract-and-load/: README.md  pyproject.toml
libs/extract-and-load/src/extract_and_load/: __init__.py  utils.py
libs/extract-and-load/src/extract_and_load/extractors/: __init__.py  base_extractor.py  dummy_api_extractor.py
libs/extract-and-load/src/extract_and_load/models/: __init__.py  base_config.py  extract_config.py  extract_load_config.py  load_config.py
libs/extractor-and-loader/: README.md  pyproject.toml
libs/extractor-and-loader/src/extractor_and_loader/: __init__.py  loaders.py
libs/extractor-and-loader/src/extractor_and_loader/models/: __init__.py  common.py  extract.py  extract_load.py  load.py
libs/manage-extract-and-load-configs/: README.md  pyproject.toml
libs/manage-extract-and-load-configs/src/manage_extract_and_load_configs/: __init__.py  cli.py  uploader.py
