[project]
name = "manage-extract-and-load-configs"
version = "0.1.0"
description = "Typer CLI to upload extract/load configs to blob storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.0",
    "extract-and-load",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[project.scripts]
manage-extract-and-load-configs = "manage_extract_and_load_configs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manage_extract_and_load_configs"]

[tool.uv.sources]
extract-and-load = { path = "../extract-and-load" }
